--- a/index.html
+++ b/index.html
@@ -13,15 +13,14 @@
     <title>TP2</title>
 </head>
 <body class="d-flex justify-content-center">
-    <div class="text-center w-25 mt-5 shadow-lg p-3 mb-5 bg-white rounded">
-        <h1>TP: EventBinding</h1>
-        <div class="card" id="app">
-            <input type="text" @keyup="displayInput($event)">
-            <p>{{text}}</p><br>
-            <input type="text" @keyup.esc="displayInputEsc($event)"><br>
-            <p>{{text2}}</p><br>
-            <button @click ="displayAlert()" type="button" class="btn btn-success">Alert</button>
-        </div>
+    <div class="w-25 mt-5 shadow-lg p-3 mb-5 bg-white rounded" id="app">
+        <h1 class="text-center mb-5">TP: EventBinding</h1>
+        <br>
+        <input class="w-100" type="text" @keyup="displayInput($event)">
+        <p>{{text}}</p><br>
+        <input class="w-100" type="text" @keyup.esc="displayInputEsc($event)"><br>
+        <p>{{text2}}</p><br>
+        <button @click ="displayAlert()" type="button" class="btn btn-success">Alert</button>
     </div>
 
     <script src="https://unpkg.com/vue@next"></script>
