--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-        crossorigin="anonymous"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"
     />
     <title>TP2</title>
 </head>
@@ -16,19 +12,16 @@
     <div class="w-25 mt-5 shadow-lg p-3 mb-5 bg-white rounded" id="app">
         <h1 class="text-center mb-5">TP: EventBinding</h1>
         <br>
-        <input class="w-100" type="text" @keyup="displayInput($event)">
-        <p>{{text}}</p><br>
-        <input class="w-100" type="text" @keyup.esc="displayInputEsc($event)"><br>
-        <p>{{text2}}</p><br>
+        <input class="w-100 mb-3" type="text" @keyup="displayInput($event)">
+        <p class="mb-3">{{text}}</p>
+        <input class="w-100 mb-3" type="text" @keyup.esc="displayInputEsc($event)">
+        <p class="mb-3">{{text2}}</p>
         <button @click ="displayAlert()" type="button" class="btn btn-success">Alert</button>
     </div>
 
     <script src="https://unpkg.com/vue@next"></script>
     <script src="index.js"></script>
-    <script 
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" 
-    crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
 </body>
 </html>
